--- a/src/client/index.html
+++ b/src/client/index.html
@@ -44,11 +44,15 @@
 <!-- build:js js/app.js-->
 <!-- inject:js -->
 <script src="/src/client/app/app.module.js"></script>
+<script src="/src/client/app/config.service.js"></script>
+<script src="/src/client/app/routes.config.js"></script>
 <script src="/src/client/app/issue/issue.js"></script>
-<script src="/src/client/app/layout/topnav.js"></script>
 <script src="/src/client/app/issues/issues.js"></script>
-<script src="/src/client/app/shared/api.service.js"></script>
-<script src="/src/client/app/shared/progress.service.js"></script>
+<script src="/src/client/app/layout/topnav.js"></script>
+<script src="/src/client/app/shared/api/github.service.js"></script>
+<script src="/src/client/app/shared/constants/api-urls.js"></script>
+<script src="/src/client/app/shared/services/api.service.js"></script>
+<script src="/src/client/app/shared/services/progress.service.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
 
