--- a/src/client/index.html
+++ b/src/client/index.html
@@ -18,6 +18,7 @@
     <!-- inject:css -->
     <link rel="stylesheet" href="/src/client/css/bootstrap.css">
     <link rel="stylesheet" href="/src/client/css/styles.css">
+    <link rel="stylesheet" href="/src/client/app/issues/issues.css">
     <!-- endinject -->
     <!-- endbuild -->
 
@@ -52,9 +53,9 @@
 <script src="/src/client/app/issues/issues.js"></script>
 <script src="/src/client/app/layout/topnav.js"></script>
 <script src="/src/client/app/shared/api/github.service.js"></script>
+<script src="/src/client/app/shared/constants/api-urls.js"></script>
 <script src="/src/client/app/shared/services/api.service.js"></script>
 <script src="/src/client/app/shared/services/progress.service.js"></script>
-<script src="/src/client/app/shared/constants/api-urls.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
 
