--- a/src/client/index.html
+++ b/src/client/index.html
@@ -42,6 +42,7 @@
 <script src="/bower_components/lodash/lodash.js"></script>
 <script src="/bower_components/uri-util/uri-util.js"></script>
 <script src="/bower_components/angular-link-header-parser/release/angular-link-header-parser.js"></script>
+<script src="/bower_components/moment/moment.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
 
@@ -54,9 +55,10 @@
 <script src="/src/client/app/issues/issues.js"></script>
 <script src="/src/client/app/layout/topnav.js"></script>
 <script src="/src/client/app/shared/api/github.service.js"></script>
+<script src="/src/client/app/shared/constants/api-urls.js"></script>
 <script src="/src/client/app/shared/services/api.service.js"></script>
 <script src="/src/client/app/shared/services/progress.service.js"></script>
-<script src="/src/client/app/shared/constants/api-urls.js"></script>
+<script src="/src/client/app/shared/filters/nice-date.filter.js"></script>
 <script src="/src/client/app/shared/widgets/progress/my-progress.js"></script>
 <!-- endinject -->
 <!-- endbuild -->
