fixed jhint errors

--- a/src/client/app/issue/issue.html
+++ b/src/client/app/issue/issue.html
@@ -1,7 +1,9 @@
 <div ng-show="vm.issue !== null">
     <h1 ng-bind="vm.issue.title"></h1>
 
-
+    <div class="row">
+        {{vm.issue.body}}
+    </div>
 </div>
 
 <div class="row">
